# houseplant.app

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alternative  README-COMPLETE.md  README.md  custom-build.sh  deploy.sh  docker-compose.yml  generate-lock.sh  main.rs  run-docker.sh  test-build.sh  test-flow.sh
.cargo/: config.toml
.env/: nano .env
.github/: copilot-instructions.md
src/: main.rs
srv/: main.rs
static/: style.css  test.html
templates/: abandoned_carts.html  cart.html  checkout.html  home.html  index.html  login.html  manage_products.html  membership.html  menu.html  orders.html  payment_cancel.html  payment_success.html  signup.html
templates/admin/: dashboard.html  products.html  users.html
templates/admin/templates/admin/: dashboard.html  products.html  users.html
