[package]
name = "houseplant_app_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tera = "1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.7", features = ["cookie-session"] }
env_logger = "0.9"