[package]
name = "houseplant_app_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tera = "1.19.1"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
env_logger = "0.9.3"
