[package]
name = "houseplant_app_rust"
version = "1.0.0"
edition = "2021"
resolver = "2"
rust-version = "1.70"
authors = ["Botanical Bliss Team <team@botanicalbliss.com>"]
license = "MIT"
description = "Modern botanical ecommerce platform built for millions of plant enthusiasts"
homepage = "https://botanicalbliss.com"
repository = "https://github.com/loveandsqualor/houseplant.app"
keywords = ["ecommerce", "plants", "botanical", "marketplace", "rust"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"

[dependencies]
# Core web framework
actix-web = { version = "4.5.1", features = ["secure-cookies", "rustls"] }
actix-files = "0.6.5"
actix-cors = "0.7.0"
actix-rt = "2.10.0"

# Session and authentication
actix-session = { version = "0.9.0", features = ["cookie-session"] }
argon2 = { version = "0.5.0", features = ["std"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand = "0.8.5"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"

# Template engine
tera = "1.19.1"

# HTTP client for payment integration
reqwest = { version = "0.12.0", features = ["json", "rustls-tls"] }

# ZenobiaPay integration for bank transfer payments
base64 = "0.22.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# Date and time
chrono = { version = "0.4.34", features = ["serde"] }

# Environment and configuration
dotenv = "0.15.0"
config = "0.14.0"

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# Logging and monitoring
log = "0.4.20"
env_logger = "0.11.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.9"

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# Data processing
csv = "1.3.0"

# Security and validation
validator = { version = "0.18.1", features = ["derive"] }
lettre = "0.11.4"

# File handling
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.30"

# Rate limiting
governor = "0.6.0"
nonzero_ext = "0.3.0"

# Metrics and monitoring
prometheus = { version = "0.13.3", optional = true }

# Image processing (for plant photos)
image = "0.24.8"

# Caching (optional Redis support)
redis = { version = "0.24.0", optional = true }

# Development dependencies
[dev-dependencies]
actix-test = "0.1.0"
serial_test = "3.0.0"

# Features for optional functionality
[features]
default = []
redis-cache = ["redis"]
performance-monitoring = ["prometheus"]

# Binary configuration
[[bin]]
name = "houseplant_app_rust"
path = "src/main.rs"

# Optimization profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Build configuration moved to .cargo/config.toml
